tests/fixtures/pass/vec_remove_out_of_bounds.sali
let main(): i32 = {
  let mut values: Vec(i32) = Vec(i32).new()
  values.remove(0)
}
