tests/fixtures/fail/move_not_implemented.sali
let consume(move value: i32): i32 = value

let main(): i32 = {
  let value = 7
  let consumed = consume(value)
  value
}
